Added a tutorial block that can be mined and drops itself

--- a/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
+++ b/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-	"item.willsmod.tutorial_item": "Yellow Stick"
+	"item.willsmod.tutorial_item": "Yellow Stick",
+	"block.willsmod.tutorial_block": "Special Block"
 }
