--- a/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
+++ b/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
 	"item.willsmod.tutorial_item": "Yellow Stick",
-	"block.willsmod.tutorial_block": "Special Block"
+	"block.willsmod.tutorial_block": "Special Block",
+	"block.willsmod.tutorial_slab": "Special Slab"
 }
