--- a/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
+++ b/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
@@ -2,5 +2,6 @@
 	"item.willsmod.tutorial_item": "Yellow Stick",
 	"block.willsmod.tutorial_block": "Special Block",
 	"block.willsmod.tutorial_slab": "Special Slab",
-	"block.willsmod.tutorial_stairs": "Special Stairs"
+	"block.willsmod.tutorial_stairs": "Special Stairs",
+	"block.willsmod.tutorial_wall": "Special Wall"
 }
