--- a/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
+++ b/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
@@ -5,5 +5,6 @@
 	"block.willsmod.tutorial_stairs": "Special Stairs",
 	"block.willsmod.tutorial_wall": "Special Wall",
 	"block.willsmod.oil" : "Oil",
-	"item.willsmod.oil_bucket" : "Oil Bucket"
+	"item.willsmod.oil_bucket" : "Oil Bucket",
+	"item.willsmod.pepper": "Pepper"
 }
