Added pepper crop

--- a/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
+++ b/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
@@ -6,5 +6,5 @@
 	"block.willsmod.tutorial_wall": "Special Wall",
 	"block.willsmod.oil" : "Oil",
 	"item.willsmod.oil_bucket" : "Oil Bucket",
-	"item.willsmod.pepper": "Pepper"
+	"block.willsmod.pepper": "Pepper"
 }
