--- a/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
+++ b/WillsMod/src/main/resources/assets/willsmod/lang/en_us.json
@@ -9,5 +9,6 @@
 	"block.willsmod.pepper": "Pepper",
 	"item.willsmod.pepper": "Pepper",
 	"block.willsmod.ice_berry_bush": "Ice Berry",
-	"item.willsmod.ice_berry": "Ice Berry"
+	"item.willsmod.ice_berry": "Ice Berry",
+	"itemGroup.willsmod_group": "Will's Mod"
 }
